--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,13 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
-    <title>Styled Form</title>
+    <title>Projeto Fiesc</title>
     <h:outputStylesheet name="styles.css" />
 </h:head>
 <h:body>
     <h:form id="form">
+        <ui:include src="menu.xhtml" />
         <div class="form-container">
             <p:panel header="Cadastro de Pessoa" styleClass="form-panel">
                 <p:inputText value="#{personBean.searchTerm}" placeholder="Pesquisar" styleClass="input-text"/>
