Criado o front do livro

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -6,6 +6,7 @@
     <p:menubar>
         <p:menuitem value="Home" outcome="index" />
         <p:menuitem value="About" outcome="about" />
+        <p:menuitem value="Livro" outcome="livro" />
     </p:menubar>
 </h:body>
 </html>
