--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -6,7 +6,7 @@
 
     <h:head>
         <title>Cadastro De Livros</title>
-        <h:outputStylesheet name="styles.css"/>
+        <h:outputStylesheet name="livro.css"/>
     </h:head>
 
     <h:body>
@@ -178,6 +178,11 @@
                         <f:facet name="header">Data de leitura</f:facet>
                         #{livroBean.getFormattedDataLeitura(livro)}
                     </h:column>
+                    <h:column>
+                        <f:facet name="header">Resenha</f:facet>
+                        #{livro.opiniaoResenha}
+                    </h:column>
+
                     <h:column>
                         <p:commandButton value="Editar" action="#{livroBean.edit(livro)}" update="livroForm"
                                          oncomplete="PF('dlgCadastroLivro').show()" styleClass="edit-button"/>
