Adicionado a configuração de codificação UTF-8.

--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -5,6 +5,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
+        <meta charset="UTF-8"/>
         <title>Cadastro De Livros</title>
         <h:outputStylesheet name="livro.css"/>
         <h:outputStylesheet library="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
